# whole_body_controller

dogbot_control/config/: dogbot_controllers.yaml
dogbot_control/controller/: position_control.yaml
dogbot_control/launch/: controllers.launch  dogbot_simulation.launch
dogbot_description/urdf/: dogbot.urdf  dogbot.xacro
dogbot_gazebo/launch/: dog.launch  gztest.launch
ros_command/: CMakeLists.txt  package.xml
ros_command/include/: art_pot.h  for_dyn.h  optimal.h  planning.h  scanner.h
ros_command/include/alglib/: optimization.h
ros_command/include/towr/initialization/: gait_generator.h
ros_command/models/id1/: model.config  model.sdf
ros_command/models/id1/meshes/: id1.dae
ros_command/models/id2/: model.config  model.sdf
ros_command/models/id2/meshes/: id2.dae
ros_command/models/id3/: model.config  model.sdf
ros_command/models/id3/meshes/: id3.dae
ros_command/models/my_model/: model.config  model.sdf
ros_command/src/: art_pot.cpp  for_dyn.cpp  optimal.cpp  planning.cpp  scanner.cpp
ros_command/src/alglib/: alglibinternal.cpp  alglibmisc.cpp  ap.cpp  linalg.cpp  optimization.cpp  solvers.cpp
ros_command/src/towr/: quadruped_gait_generator.cc  robot_model.cc
ros_command/urdf/: dogbot.urdf  dogbot.xacro
ros_command/world/: my_dogbot.world
